// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Controls/ListSliceSnapshots reload должен выполнить перезагрузку и обновить items на стейте 1`] = `
<DocumentFragment>
  <div>
    [
    {
        "items": 0,
        "loading": false,
        "executedActionsToDispatch": "undefined"
    },
    {
        "loading": true
    },
    {
        "items": 3,
        "loading": false,
        "executedActionsToDispatch": [
            "reload"
        ]
    }
]
  </div>
</DocumentFragment>
`;

exports[`Controls/ListSliceSnapshots selectionViewMode сбрасывается при перезагрузке (вызов метода reload) 1`] = `
<DocumentFragment>
  <div>
    [
    {
        "loading": false,
        "selectionViewMode": "hidden",
        "executedActionsToDispatch": "undefined"
    },
    {
        "selectionViewMode": "selected"
    },
    {
        "loading": true
    },
    {
        "loading": false,
        "selectionViewMode": "hidden",
        "executedActionsToDispatch": [
            "reload"
        ]
    }
]
  </div>
</DocumentFragment>
`;

exports[`Controls/ListSliceSnapshots Во время метода load можно менять стейт, который не влияет на загрузку данных 1`] = `
<DocumentFragment>
  <div>
    [
    {
        "loading": false,
        "markedKey": "undefined",
        "executedActionsToDispatch": "undefined"
    },
    {
        "loading": true
    },
    {
        "markedKey": "test"
    },
    {
        "loading": false,
        "markedKey": "undefined"
    }
]
  </div>
</DocumentFragment>
`;

exports[`Controls/ListSliceSnapshots Вызов reload в момент, когда уже идёт загрузка. Стейт loading из-за отмены предыдущей загрузки не должен сбрасываться  1`] = `
<DocumentFragment>
  <div>
    [
    {
        "loading": false,
        "filter": {},
        "executedActionsToDispatch": "undefined"
    },
    {
        "loading": true
    },
    {},
    {
        "loading": false,
        "filter": {
            "key": 1
        }
    },
    {
        "loading": true
    },
    {
        "loading": false,
        "executedActionsToDispatch": [
            "reload"
        ]
    }
]
  </div>
</DocumentFragment>
`;

exports[`Controls/ListSliceSnapshots Вызов метода search c тем же searchValue, что и на стейте 1`] = `
<DocumentFragment>
  <div>
    [
    {
        "loading": false,
        "searchValue": "test",
        "executedActionsToDispatch": "undefined"
    },
    {
        "loading": true
    },
    {
        "loading": false,
        "executedActionsToDispatch": [
            "reload"
        ]
    }
]
  </div>
</DocumentFragment>
`;

exports[`Controls/ListSliceSnapshots Готово. Вызов reload с параметром keepNavigation должен сохранять навигацию при перезагрузке 1`] = `
<DocumentFragment>
  <div>
    [
    {
        "slice.state.items.getCount": 1,
        "loading": false,
        "navigation": {
            "source": "page",
            "sourceConfig": {
                "multiNavigation": false,
                "pageSize": 1,
                "page": 0,
                "hasMore": false
            }
        },
        "executedActionsToDispatch": "undefined"
    },
    {
        "loading": true
    },
    {
        "loading": false
    },
    {
        "loading": true
    },
    {
        "loading": false,
        "executedActionsToDispatch": [
            "reload"
        ]
    }
]
  </div>
</DocumentFragment>
`;

exports[`Controls/ListSliceSnapshots Загрузка записей по скролу Источник вернул ошибку загрузки 1`] = `
<DocumentFragment>
  <div>
    [
    {
        "errorViewConfig": "undefined",
        "executedActionsToDispatch": "undefined"
    },
    {
        "errorViewConfig": {
            "type": "maintenance",
            "status": 504,
            "template": "SbisEnvUI/ParkingTemplates:InList",
            "options": {
                "message": "Извините, мы на техническом обслуживании",
                "image": {
                    "default": "/cdn/Maintenance/1.1.3/img/SERVICE_FOR_MAINTENANCE_default.svg",
                    "dark": "/cdn/Maintenance/1.1.3/img/SERVICE_FOR_MAINTENANCE_blue.svg"
                },
                "action": "function",
                "details": "",
                "error": null,
                "showInDirection": "down"
            },
            "mode": "inlist"
        }
    }
]
  </div>
</DocumentFragment>
`;

exports[`Controls/ListSliceSnapshots После поиска не должно сбрасываться состояние searchInputValue, если оно менялось, пока выполнялся запрос 1`] = `
<DocumentFragment>
  <div>
    [
    {
        "loading": false,
        "searchInputValue": "",
        "searchValue": "",
        "filter": {},
        "executedActionsToDispatch": "undefined"
    },
    {
        "searchInputValue": "test"
    },
    {},
    {
        "loading": true
    },
    {
        "searchInputValue": "testPlus"
    },
    {
        "loading": false,
        "searchValue": "test",
        "filter": {
            "testSearchParam": "test"
        }
    }
]
  </div>
</DocumentFragment>
`;

exports[`Controls/ListSliceSnapshots При изменении фильтра должна произойти перезагрузка с новым фильтром 1`] = `
<DocumentFragment>
  <div>
    [
    {
        "loading": false,
        "filter": {},
        "executedActionsToDispatch": "undefined"
    },
    {
        "loading": true
    },
    {},
    {
        "loading": false,
        "filter": {
            "title": "Платформа"
        }
    }
]
  </div>
</DocumentFragment>
`;

exports[`Controls/ListSliceSnapshots повторный вызов метода reload должен отменить предыдущую загрузку, если она выполняется 1`] = `
<DocumentFragment>
  <div>
    [
    {
        "loading": false,
        "selectionViewMode": "hidden",
        "executedActionsToDispatch": "undefined"
    },
    {
        "loading": true
    },
    {
        "loading": false,
        "executedActionsToDispatch": [
            "reload"
        ]
    },
    {
        "loading": true
    },
    {
        "loading": false
    }
]
  </div>
</DocumentFragment>
`;
